fix(yalb-1501): changing the theme to dark mode and streamlining overrides

--- a/web/themes/custom/ys_admin_theme/scss/gin-color-overrides.scss
+++ b/web/themes/custom/ys_admin_theme/scss/gin-color-overrides.scss
@@ -31,12 +31,13 @@
   [data-gin-accent="light_blue"] {
     --gin-color-primary-rgb: 217, 241, 243;
   /* --gin-color-primary-rgb: 78, 89, 89; */
+    --gin-color-text: var(--wool);
     --gin-color-text-light: var(--wool);
-    --gin-bg-item-hover: var(--dark-theme-gray-hover);
+    // --gin-bg-item-hover: var(--dark-theme-gray-hover);
     --gin-bg-header: var(--dark-theme-gray);
     --gin-color-primary-active: var(--wool) !important;
     --gin-color-secondary: var(--mediterranean-blue) !important;
-    --gin-color-primary-hover: var(--dark-theme-gray-hover) !important;
+    --gin-color-primary-hover: var(--dark-primary-link-hover) !important;
     --gin-color-primary-light: var(--gin-bg-item-hover) !important;
     --gin-border-color-layer: var(--light-gray) !important;
     --gin-bg-layer: var(--dark-theme-gray) !important;
@@ -48,8 +49,14 @@
     --gin-icon-color: var(--dark-gin-icon-color);
     --gin-color-button-text: var(--custom-button-color-text);
     --gin-bg-layer3: var(--dark-theme-gray-hover);
-    --gin-color-title: var(--dark-theme-gray);
+    // --gin-color-title: var(--dark-theme-gray);
+    --gin-color-primary-hover: var(--custom-button-color-hover) !important;
   }
+}
+
+// Dark mode
+.gin--dark-mode   [data-gin-accent="light_blue"] {
+  --gin-color-primary-rgb: 217, 241, 243 !important;
 }
 
 /* stylelint-enable */
